@@ -38,6 +38,9 @@
 ;; address and the required Emacs version are auto-frobbed from
 ;; configure.ac, so you should edit that file and run "autoconf &&
 ;; ./configure" to change them.
+;; In Emacs release branch, this is already the anticipated Tramp
+;; version of the next Tramp release integrated in Emacs.  This is to
+;; allow Emacs emergency releases w/o additional Tramp bureaucracy.
 
 ;;;###tramp-autoload
 (defconst tramp-version "@PACKAGE_VERSION@"
@@ -89,6 +92,9 @@
 ;; version, it must be added here as well (see `tramp-syntax', for
 ;; example).  This can be checked by something like
 ;; (customize-changed "26.1")
+;; In Emacs release branch, there is already the anticipated Tramp
+;; version of the next Tramp release integrated in Emacs.  This is to
+;; allow Emacs emergency releases w/o additional Tramp bureaucracy.
 (add-to-list
  'customize-package-emacs-version-alist
  '(Tramp ("2.0.55" . "22.1") ("2.0.57" . "22.2") ("2.0.58-pre" . "22.3")
@@ -102,7 +108,7 @@
          ("2.3.5.26.3" . "26.3")
          ("2.4.3.27.1" . "27.1") ("2.4.5.27.2" . "27.2")
          ("2.5.2.28.1" . "28.1") ("2.5.3.28.2" . "28.2") ("2.5.4" . "28.3")
-         ("2.6.0.29.1" . "29.1") ("2.6.2.29.2" . "29.2")))
+         ("2.6.0.29.1" . "29.1") ("2.6.2.29.2" . "29.2") ("2.6.3-pre" . "29.3")))
 
 (add-hook 'tramp-unload-hook
 	  (lambda ()
