@@ -1,3 +1,8 @@
+2024-03-26  Michael Albinus  <michael.albinus@gmx.de>
+
+	* trampver.el.in (customize-package-emacs-version-alist):
+	Add Tramp version integrated in Emacs 29.2.
+
 2024-03-14  Tim Landscheidt  <tim@tim-landscheidt.de>
 
 	* tramp-cmds.el (tramp-cleanup-some-buffers):
